[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]

[project]
name = "tou-optimizer"
version = "0.1.0"
description = "TOU load-shift MILP optimizer API"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.109.0",
  "uvicorn[standard]>=0.27.0",
  "pydantic>=2.5.0",
  "pulp>=2.8.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.4.0",
  "httpx>=0.26.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
